fix CSS style to meet accessibility requirements for contrast ratio

--- a/public/stylesheets/budgets/style.css
+++ b/public/stylesheets/budgets/style.css
@@ -39,7 +39,7 @@ body {
 }
 
 .delete-btn {
-  background-color: #3498db;
+  background-color: #2a352a;
   color: #fff;
   border: none;
   padding: 5px 10px;
